za7luan8/terminal
bug.cpp:103:13: error: expected ';' at end of declaration
        int a=1<<33     
                   ^
                   ;
bug.cpp:103:9: warning: shift count >= width of type [-Wshift-count-overflow]
        int a=1<<33     
               ^ ~~
1 warning and 1 error generated.
